Added code to reset input fields

--- a/library.html
+++ b/library.html
@@ -24,12 +24,14 @@
             <span class="close">&times;</span>
    
                 <div class="addDataForm">
+                    <form>
                     <label for="title">Title</label><input type="text" id="title"></input>
                     <label for="Author">Author</label><input type="text" id="author"></input>
                     <label for="Pages">Pages</label><input type="text" id="pages"></input>
                     
                     <label for="Status">Status</label><select id="status"><option value="Read">Read</option><option value="Not Read">Not yet Read</option></select>
                    <input type="button" id="addToStock" value="addtoStock"></input>
+                </form>
                 </div>
          
           </div>
