--- a/library.html
+++ b/library.html
@@ -25,11 +25,11 @@
    
                 <div class="addDataForm">
                     <form>
-                    <label for="title">Title</label><input type="text" id="title"></input>
-                    <label for="Author">Author</label><input type="text" id="author"></input>
-                    <label for="Pages">Pages</label><input type="text" id="pages"></input>
+                   <div> <label for="title">Title</label><input type="text" id="title"></input> </div>
+                   <div>   <label for="Author">Author</label><input type="text" id="author"></input> </div>
+                    <div>      <label for="Pages">Pages</label><input type="text" id="pages"></input> </div>
                     
-                    <label for="Status">Status</label><select id="status"><option value="Read">Read</option><option value="Not Read">Not yet Read</option></select>
+                    <div>    <label for="Status">Status</label><select id="status"><option value="Read">Read</option><option value="Not Read">Not yet Read</option></select> </div>
                    <input type="button" id="addToStock" value="addtoStock"></input>
                 </form>
                 </div>
